@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9756 2005/04/04 21:46:02 agc Exp $
+$NetBSD: CHANGES,v 1.9757 2005/04/04 22:05:29 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1905,3 +1905,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated abiword to 2.2.6 [adam 2005-04-04]
 	Updated abiword-plugins to 2.2.6 [adam 2005-04-04]
 	Updated postfix to 2.2.2 [martti 2005-04-04]
+	Updated udfclient to 0.4.3 [reinoud 2005-04-04]
